<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.presentation.AuthFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/frg_login__toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frg_login__toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="регистрация" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frg_login__toolbar"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/frg_login__mb_action_button"
                android:gravity="center"
                android:orientation="vertical">

                <include layout="@layout/layout_auth_login" />

                <include layout="@layout/layout_auth_signin" />

                <include layout="@layout/layout_auth_confirmation" />

                <include layout="@layout/layout_auth_reset_password_email" />

                <include layout="@layout/layout_auth_reset_password_new_password" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/frg_login__mb_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="48dp"
                android:backgroundTint="@color/primary_color"
                android:clickable="false"
                android:paddingHorizontal="48dp"
                android:paddingVertical="16dp"
                android:text="@string/login_button_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="24dp" />

            <TextView
                android:id="@+id/frg_login__tv_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/no_account_question"
                android:textColor="@color/text_secondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frg_login__mb_action_button" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>